Compile the shared adapter against 1.16.5
Architectury Loom unblocks what ModDevGradle refused. It is the build tool,
not the runtime library: Architectury API stays ruled out, and players still
install one jar. PORTING.md section 3.3 already listed the Loom as an
acceptable fallback; this is where it earns its place.

The two Looms cannot share a classpath - Architectury Loom is a fork of
Fabric Loom and ships the same plugin class, which fails with
"'net.fabricmc.loom.LoomGradlePlugin' is neither a plugin or a rule source".
A plugins block cannot be conditional, so the loom and ModDevGradle now come
in through a buildscript block, which can, chosen by build_toolchain in the
version descriptor.

Compiling then found more than the draw loop the first measurement showed,
because that probe silently used a different mapping set:

- getYRot/getXRot, getInventory and getProfileId are getters from 1.17 and
  public fields or absent before. Each is now a one-line class per version,
  beside ScreenBackground.
- 1.16 has no isMiddlePressed. Dropped rather than worked around: the middle
  button's usual effect already shows in the selected hotbar slot, which the
  fingerprint reads.
- 1.16.5 targets Java 8, so common/src/main loses var, List.of and
  Optional.isEmpty. It is now Java 8 clean, as core has always been. The
  per-version directories keep their own version's language level.

All three versions build. The 1.16.5 loader modules are not wired yet.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01N5XXCP6LDsUE5X5Nzps5eK